commit for Render

--- a/src/main/resources/templates/person/otherapi.html
+++ b/src/main/resources/templates/person/otherapi.html
@@ -17,6 +17,9 @@
                 <h5>Страница приложения работает с внешним
                     сервисом, который возвращает возраст произвольных
                     имен, если их нет в текстовом файле.</h5>
+<hr/>
+                <br/>
+                <h3>Введите имя на английском языке!</h3>
             </div>
         </div>
         <div>
