--- a/src/main/resources/templates/statistic/count.html
+++ b/src/main/resources/templates/statistic/count.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-<header th:insert="blocks/header :: header">
+<header th:insert="~{blocks/header::header}">
 </header>
 <hr/>
 
@@ -20,6 +20,6 @@
     <p th:text="${person.getPersonName() + '. Количество запросов имени:  ' + person.getCount()}">person</p>
 </div>
 
-<footer th:insert="blocks/footer :: footer"></footer>
+<footer th:insert="~{blocks/footer :: footer}"></footer>
 </body>
 </html>
