--- a/src/main/resources/templates/statistic/statistic.html
+++ b/src/main/resources/templates/statistic/statistic.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<header th:insert="blocks/header :: header">
+<header th:insert="~{blocks/header::header}">
 </header>
 <hr/>
 <main>
@@ -44,6 +44,6 @@
 
 </main>
 
-<footer th:insert="blocks/footer :: footer"></footer>
+<footer th:insert="~{blocks/footer :: footer}"></footer>
 </body>
 </html>
